--- a/adopt-me/src/index.html
+++ b/adopt-me/src/index.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+  <div id="modal"></div>
   <div id="root">not render</div>
   <script type="module" src="./App.jsx"></script>
 </body>
